# esp-32-vend-working

./: .gitignore  PROTOCOLS.md  SYSTEM_ARCHITECTURE.md
.claude/: launch.json
esp32-setup/: .gitignore  settings.gradle.kts
esp32-setup/app/: build.gradle.kts  proguard-rules.pro
esp32-setup/gradle/: libs.versions.toml
mdb-slave-esp32s3/main/: CMakeLists.txt
supabase/: config.toml
supabase/migrations/: 20260309000000_initial_schema.sql  20260311000000_add_yappy_support.sql  20260312000000_add_dashboard_support.sql  20260312100000_add_product_cost.sql
vending-app/: build.gradle.kts  gradle.properties  settings.gradle.kts
vending-app/app/: build.gradle.kts  proguard-rules.pro
vending-app/docs/: ARCHITECTURE.md  BLE_FLOW.md  README.md
vending-app/gradle/: libs.versions.toml
vending-backend/: .env.example  Caddyfile  docker-compose.yml
vending-backend/docs/: API.md  ARCHITECTURE.md  (+2 more)
vending-esp32/: sdkconfig.defaults
vending-esp32-display/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
vending-esp32-display/main/: CMakeLists.txt  Kconfig.projbuild  ble_handler.c  ble_handler.h  config.h  display_handler.c  display_handler.h  idf_component.yml  main.c  mqtt_handler.c  mqtt_handler.h  nimble.c  nimble.h  telemetry.c  webui_server.c  yappy_handler.c  yappy_handler.h
vending-esp32-yappy/: sdkconfig
vending-esp32/main/: CMakeLists.txt  Kconfig.projbuild  ble_handler.c  ble_handler.h  config.h  idf_component.yml  led_status.c  led_status.h  main.c  mdb_handler.c  mdb_handler.h  mqtt_handler.c  telemetry.c  xor_crypto.c  xor_crypto.h
(+139 files in other folders)
